# BAAI-ZHIPU-RAG

./: .env  pyproject.toml  rag_ZHIPU.py
models/models--BAAI--bge-small-zh-v1.5/refs/: main
